--- a/styles/global.css
+++ b/styles/global.css
@@ -256,3 +256,17 @@ h2 {
 		gap: 8px;
 	}
 }
+
+@media (max-width: 510px) {
+	nav ul {
+		margin-top: 20px;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	nav ul li {
+		margin: 10px 10px;
+		font-size: clamp(0.7rem, 1rem + 2vw, 1.1rem);
+	}
+}
